--- a/Form.html
+++ b/Form.html
@@ -13,21 +13,21 @@
     <title>Forma</title>
   </head>
   <body>
-    <div class="form">
-      <h1>Sign up</h1>
-      <p>Get started with your free account</p>
-      <form>
-        <div class="inputbox">
-          <input type="text" class="input-text" required="required" />
-          <span>Email</span>
+    <div class="container">
+      <div class="header">
+        <h1 class="title">Sign up</h1>
+        <p class="paragraph">Get started with your free account</p>
+      </div>
+      <form class="form">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required />
         </div>
-        <div class="inputbox">
-          <input type="number" class="input-number" required="required" />
-          <span>Password</span>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" required />
         </div>
-        <div class="inputbox">
-          <input type="button" class="form__button" value="submit" />
-        </div>
+        <button type="submit" class="btn">Submit</button>
       </form>
     </div>
     <script src="./Form.js"></script>
